workshop/content/src/deployments/fake-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-feature-x
spec:
  hosts:
  - 'feature-x.ike-demo.io'
  gateways:
  - customer-gateway
  http:
  - route:
    - destination:
        host: customer
        subset: v1
        port:
          number: 8080
    headers:
      request:
        add:
          ike-session-id: feature-x
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-feature-y
spec:
  hosts:
  - 'feature-y.ike-demo.io'
  gateways:
  - customer-gateway
  http:
  - route:
    - destination:
        host: customer
        subset: v1
        port:
          number: 8080
    headers:
      request:
        add:
          ike-session-id: feature-y
